[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1035.0
margin_bottom = 610.0
color = Color( 0.0862745, 0.0980392, 0.12549, 1 )

[node name="Login" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="LoginButton" type="Button" parent="Login"]
margin_left = 426.0
margin_top = 376.0
margin_right = 535.0
margin_bottom = 396.0
text = "Login"

[node name="Username" type="LineEdit" parent="Login"]
margin_left = 348.0
margin_top = 227.0
margin_right = 645.0
margin_bottom = 267.0
clear_button_enabled = true
placeholder_text = "Username"

[node name="Password" type="LineEdit" parent="Login"]
margin_left = 348.0
margin_top = 296.0
margin_right = 645.0
margin_bottom = 336.0
secret = true
clear_button_enabled = true
placeholder_text = "Password"

[node name="Register" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="RegisterButton" type="Button" parent="Register"]
margin_left = 426.0
margin_top = 376.0
margin_right = 535.0
margin_bottom = 396.0
text = "Create Account"

[node name="Username" type="LineEdit" parent="Register"]
margin_left = 348.0
margin_top = 227.0
margin_right = 645.0
margin_bottom = 267.0
clear_button_enabled = true
placeholder_text = "Username"

[node name="Password" type="LineEdit" parent="Register"]
margin_left = 348.0
margin_top = 296.0
margin_right = 645.0
margin_bottom = 336.0
secret = true
clear_button_enabled = true
placeholder_text = "Password"

[node name="Switch" type="Button" parent="."]
margin_left = 642.0
margin_top = 176.0
margin_right = 704.0
margin_bottom = 196.0
text = "Create an Account"

[node name="ErrorMSG" type="Label" parent="."]
visible = false
margin_left = 464.0
margin_top = 178.0
margin_right = 518.0
margin_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
text = "TEST ERROR MESSAGE"
